Fix directory path for interior design agent

--- a/.github/workflows/interior-design-agent.yml
+++ b/.github/workflows/interior-design-agent.yml
@@ -40,5 +40,5 @@ jobs:
 
       - name: Run interior design agent initializer
         run: |
-          cd app/
+          cd src/app/
           python app/agents/interiorDesignAgent_initializer.py
