--- a/.github/workflows/inventory-agent.yml
+++ b/.github/workflows/inventory-agent.yml
@@ -40,5 +40,5 @@ jobs:
 
       - name: Run inventory agent initializer
         run: |
-          cd app/
+          cd src/app/
           python app/agents/inventoryAgent_initializer.py
